added more test

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,5 +17,7 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - name: Get node modules
+      run: cp -R /workdir/node_modules .
     - name: get environment information
       run: pwd; ls -lah
