--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ env:
 jobs:
   Download_and_test:
     name: Download and test
-    runs-on: martyca/docusaurus_builder
+    runs-on: martyca/docusaurus_builder:latest
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
